--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
-# IntelliJ Project files #
-*.iml
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
 *.ipr
 *.iws
+*.iml
+.idea
 
-# Gradle #
-/.gradle/
-/eclipse/
-/run/
-/build/
-/out/
-/run/
+# gradle
+build
+.gradle
 
-# Eclipse #
-/mappings/
-*.classpath
-.project
-*.prefs
-*.launch
+# other
+eclipse
+run
 
-# Minecraft #
-/bin/
-/mods/
-/logs/
-/config/
+# Files from Forge MDK
+forge*changelog.txt
